# CppTemplate

./: AGENTS.md  CMakeLists.txt  HelloWorldClass_8hpp_source.html  README.md  dir_57cc1eceb81ab90f0f53a3b105be807b.html  doxygen_crawl.html  files.html  globals.html  globals_func.html  index.html  main_8cpp.html  md_README.html  navtreedata.js  pages.html
.github/agents/: add-library.prompt.md  code-quality.prompt.md  orchestrator.prompt.md  review-code.prompt.md  run-tests.prompt.md  write-cpp-code.prompt.md  write-tests.prompt.md
.github/skills/: cpp20-standards.prompt.md  gtest-conventions.prompt.md  project-conventions.prompt.md  review-checklist.prompt.md  solid-principles.prompt.md
lib_stats/: CMakeLists.txt  Stats.cpp  Stats.hpp  Stats.test.cpp
search/: searchdata.js
